syntax = "proto3";

package order;

option go_package = "distributed-service/test/proto/order";

// 订单服务
service OrderService {
  // 获取订单信息
  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
  
  // 创建订单
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
}

// 获取订单请求
message GetOrderRequest {
  string order_id = 1;
}

// 获取订单响应
message GetOrderResponse {
  Order order = 1;
}

// 创建订单请求
message CreateOrderRequest {
  string user_id = 1;
  repeated OrderItem items = 2;
}

// 创建订单响应
message CreateOrderResponse {
  Order order = 1;
}

// 订单信息
message Order {
  string id = 1;
  string user_id = 2;
  repeated OrderItem items = 3;
  double total_amount = 4;
  int64 created_at = 5;
}

// 订单项
message OrderItem {
  string product_id = 1;
  string product_name = 2;
  int32 quantity = 3;
  double price = 4;
} 