syntax = "proto3";

package user;

option go_package = "distributed-service/test/proto/user";

// 用户服务
service UserService {
  // 获取用户信息
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  
  // 列出用户
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
  
  // 创建用户
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  
  // 更新用户
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  
  // 删除用户
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}

// 获取用户请求
message GetUserRequest {
  string user_id = 1;
}

// 获取用户响应
message GetUserResponse {
  User user = 1;
}

// 列出用户请求
message ListUsersRequest {
  int32 page = 1;
  int32 page_size = 2;
}

// 列出用户响应
message ListUsersResponse {
  repeated User users = 1;
  int32 total = 2;
}

// 创建用户请求
message CreateUserRequest {
  string name = 1;
  string email = 2;
}

// 创建用户响应
message CreateUserResponse {
  User user = 1;
}

// 更新用户请求
message UpdateUserRequest {
  string user_id = 1;
  string name = 2;
  string email = 3;
}

// 更新用户响应
message UpdateUserResponse {
  User user = 1;
}

// 删除用户请求
message DeleteUserRequest {
  string user_id = 1;
}

// 删除用户响应
message DeleteUserResponse {
  bool success = 1;
}

// 用户信息
message User {
  string id = 1;
  string name = 2;
  string email = 3;
  int64 created_at = 4;
} 